<resources>
    <string name="app_name">Padara</string>
    <string name="trlInfo">Herkes tarafından sevilen mobil bankacılık</string>
    <string name="trl">Anlık ve her zaman yapılan para transferleri, işlem geçmişini kontrol etme, sağlıklı işlem yapabilirsiniz.</string>
    <string name="buttonText1">Devam edin</string>
    <string name="textHint">TC Kimlik Numarası</string>
    <string name="textHint2">Parola</string>
    <string name="text1">Günaydın</string>
    <string name="text2">İyi akşamlar</string>
    <string name="buttonText2"> Giriş yap </string>
    <string name="text3">İyi Günler</string>
    <string name="text4">İyi Akşamlar</string>
    <string name="textBalance">PADARA</string>
    <string name="texthesaphareket">Detay</string>
    <string name="textParayatir">Yatır</string>
    <string name="textParagonder">Gönder</string>
    <string name="textpadarano">Padara Numaran:</string>
    <string name="buttonText3">Gönder</string>
    <string name="checkboxtext">Beni Hatırla</string>
    <string name="kullanablrbakiye">Kullanılabilir Bakiye</string>
    <string name="hesaptext">Hesaplarım</string>
    <string name="kartlartext">Kartlarım</string>
    <string name="buttonText4">Devam Et</string>
    <string name="paraislem">Para Gönderme İşlemi Başarılı</string>
</resources>