<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorTutorialBg"
    android:padding="20dp"


    tools:context=".frmLogin">

   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent">
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_account_circle_24" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:autoSizeMaxTextSize="30sp"
        android:text="@string/text1"
        android:fontFamily="@font/robotomedium"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:autoSizeMinTextSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textinputlayout1"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

       <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/textinputlayout1"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="40dp"
           android:hint="@string/textHint"
           app:boxBackgroundColor="@color/white"
           app:boxStrokeColor="#FFFFFF"

           app:hintTextColor="#7E7E7E"
           app:layout_constraintEnd_toEndOf="@+id/materialTextView"
           app:layout_constraintStart_toStartOf="@+id/materialTextView"
           app:layout_constraintTop_toBottomOf="@+id/materialTextView"
           app:placeholderTextColor="@color/white">

           <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/txtTcNo"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:inputType="number"
               android:maxLength="11"
               android:textAlignment="center"
               android:textColor="@color/black"
               android:textColorHint="#FFFFFF"
               android:textSize="18sp" />

       </com.google.android.material.textfield.TextInputLayout>

       <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/textinputlayout2"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginStart="20dp"
           android:layout_marginTop="32dp"
           android:layout_marginEnd="20dp"

           android:hint="@string/textHint2"
           android:textAlignment="center"
           android:visibility="visible"
           app:boxBackgroundColor="@color/white"
           app:endIconMode="password_toggle"
           app:hintTextColor="#7E7E7E"
           app:layout_constraintEnd_toEndOf="@+id/textinputlayout1"
           app:layout_constraintHorizontal_bias="0.0"
           app:layout_constraintStart_toStartOf="@+id/textinputlayout1"
           app:layout_constraintTop_toBottomOf="@+id/textinputlayout1">


           <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/txtSifre"

               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:foregroundTint="@color/white"
               android:hint="******"
               android:inputType="numberPassword"
               android:maxLength="6"
               android:textAlignment="center"
               android:textColor="@color/black"
               android:textSize="18sp" />

       </com.google.android.material.textfield.TextInputLayout>

       <Button
           android:id="@+id/btnSign"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="32dp"
           android:layout_marginBottom="32dp"
           android:background="@drawable/buttonbg"
           android:padding="10dp"
           android:text="@string/buttonText2"
           android:textAlignment="center"
           android:textColor="@color/black"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintEnd_toEndOf="@+id/textinputlayout2"
           app:layout_constraintStart_toStartOf="@+id/textinputlayout2"
           app:layout_constraintTop_toBottomOf="@+id/textinputlayout2" />
   </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>